# chineseai

./: .gitignore  Cargo.toml  EXPERIMENT_NOTES.md  PIKAFISH_D8_EXPERIMENTS.md  build.rs  eval_fens.txt  opening.obk  tactical_teacher.tsv
.cargo/: config.toml
docs/: az_training_debug_notes.md  nnue极速实验.md
eval/: pikafish-random-5000-d8.sqlite
src/: az.rs  az_loop_config.rs  board_transform.rs  cpu_topology.rs  lib.rs  main.rs  nnue.rs  obk_zobrist.rs  opening_book.rs  pikafish_match.rs  profile.rs  rule_ui.rs  rules.rs  search.rs  uci.rs  xiangqi.rs
src/az/: alphazero.rs  candle_model.rs  dataloader.rs  distill.rs  env.rs  gumbel.rs  mctx.rs  model.rs  model_binary.rs  model_config.rs  model_ops.rs  optim.rs  play.rs  policy_features.rs  replay.rs  train.rs  train_gpu.rs  train_gpu_candle.rs
src/xiangqi/: env.rs  eval.rs  geom.rs  hash.rs  mod.rs  rules.rs  tests.rs  types.rs
tools/: auto_train_until_win.py  distill_pikafish.py  parallel_distill_pikafish.py  parallel_selfplay_dump.py  pikafish  run_matches.py  torch_pika_experiment.py  train_nnue.py
