[package]
name = "chineseai"
version = "0.1.0"
edition = "2024"

[dependencies]
tensorboard-rs = "0.5"
lz4_flex = { version = "0.11", default-features = false, features = ["std"] }
ctrlc = "3.4"
clap = { version = "4.5", features = ["derive"] }
candle-core = { version = "0.10.2", features = ["cuda"] }
candle-nn = "0.10.2"
half = "2"
ndarray = "0.16"
ndarray-npy = "0.9"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
zip = "2"

# Enable jemalloc on Linux glibc. musl targets skip this dependency and are
# rejected by build.rs.
[target.'cfg(all(target_os = "linux", not(target_env = "musl")))'.dependencies]
tikv-jemallocator = "0.6"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
