[package]
name = "chineseai"
version = "0.1.0"
edition = "2024"

[dependencies]
tensorboard-rs = "0.5"
lz4_flex = { version = "0.11", default-features = false, features = ["std"] }
ctrlc = "3.4"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[features]
default = []
gpu-train = ["dep:candle-core", "dep:candle-nn"]
profile = []

# Linux glibc is the training target: compile CUDA/Candle by default there.
# Windows stays light by default; use `--features gpu-train` to opt in.
[target.'cfg(all(target_os = "linux", not(target_env = "musl")))'.dependencies]
candle-core = { version = "0.10.2", features = ["cuda"] }
candle-nn = "0.10.2"
tikv-jemallocator = "0.6"

[target.'cfg(not(all(target_os = "linux", not(target_env = "musl"))))'.dependencies]
candle-core = { version = "0.10.2", features = ["cuda"], optional = true }
candle-nn = { version = "0.10.2", optional = true }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.fast]
inherits = "release"
lto = "thin"
codegen-units = 16
incremental = true
