[package]
name = "chineseai"
version = "0.1.0"
edition = "2024"

[dependencies]
tensorboard-rs = "0.5"
byteorder = "1.5"
candle-core = { version = "0.10.2", features = ["cuda"] }
candle-nn = "0.10.2"
rayon = "1.12"
lz4_flex = { version = "0.11", default-features = false, features = ["std"] }
ctrlc = "3.4"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[features]
default = []
gpu-train = []
nccl-train = ["gpu-train", "candle-core/nccl"]
profile = []

[target.'cfg(all(target_os = "linux", not(target_env = "musl")))'.dependencies]
tikv-jemallocator = "0.6"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.fast]
inherits = "release"
lto = "thin"
codegen-units = 16
incremental = true
